# shell

./: .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  INSTALL.md  monitoring_project  shell  test_commands
configs/: app.config  settings.json
include/: commands.h  parse.h  shell.h
script/: run_coverage.sh
src/: commands.c  main.c  parse.c  shell.c
tests/: test_commands.c
